fix spacing for small

--- a/freelancefinder/static/css/main.css
+++ b/freelancefinder/static/css/main.css
@@ -3900,3 +3900,7 @@
 .description-toggle {
     cursor:pointer;
 }
+
+.second-row div {
+    padding-bottom: 10px;
+}
